--- a/index.yml
+++ b/index.yml
@@ -1,3 +1,12 @@
 tomcat
-|__conf
-   |__server.xml
+└── conf
+    ├── catalina.policy
+    ├── catalina.properties
+    ├── context.xml
+    ├── jaspic-providers.xml
+    ├── jaspic-providers.xsd
+    ├── logging.properties
+    ├── server.xml
+    ├── tomcat-users.xml
+    ├── tomcat-users.xsd
+    └── web.xml
